// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`acala & polkadot > acala transfer DOT to polkadot > balance on from chain 1`] = `
{
  "free": 10000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`acala & polkadot > acala transfer DOT to polkadot > balance on to chain 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": 0,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`acala & polkadot > acala transfer DOT to polkadot > from chain ump messages 1`] = `[]`;

exports[`acala & polkadot > acala transfer DOT to polkadot > to chain ump events 1`] = `[]`;

exports[`acala & polkadot > acala transfer DOT to polkadot > tx events 1`] = `[]`;

exports[`acala & polkadot > acala transfer DOT with limited weight > balance on from chain 1`] = `
{
  "free": 10000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`acala & polkadot > acala transfer DOT with limited weight > balance on to chain 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": 0,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`acala & polkadot > acala transfer DOT with limited weight > from chain ump messages 1`] = `[]`;

exports[`acala & polkadot > acala transfer DOT with limited weight > to chain ump events 1`] = `[]`;

exports[`acala & polkadot > acala transfer DOT with limited weight > tx events 1`] = `[]`;

exports[`acala & polkadot > polkadot transfer DOT to acala > balance on from chain 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": "(rounded 9000000000000)",
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`acala & polkadot > polkadot transfer DOT to acala > balance on to chain 1`] = `
{
  "free": 0,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`acala & polkadot > polkadot transfer DOT to acala > to chain dmp events 1`] = `
[
  {
    "data": {
      "count": 1,
    },
    "method": "DownwardMessagesReceived",
    "section": "parachainSystem",
  },
  {
    "data": {
      "dmqHead": "(hash)",
      "weightUsed": {
        "proofSize": "(rounded 8000)",
        "refTime": "(rounded 500000000)",
      },
    },
    "method": "DownwardMessagesProcessed",
    "section": "parachainSystem",
  },
  {
    "data": {
      "id": "(hash)",
      "origin": "Parent",
      "success": false,
      "weightUsed": {
        "proofSize": 0,
        "refTime": 200000000,
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`acala & polkadot > polkadot transfer DOT to acala > tx events 1`] = `
[
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": "(rounded 6000)",
            "refTime": "(rounded 300000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "xcmPallet",
  },
  {
    "data": {
      "fees": [
        {
          "fun": {
            "Fungible": 397000000,
          },
          "id": {
            "interior": "Here",
            "parents": 0,
          },
        },
      ],
      "paying": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": "Polkadot",
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "FeesPaid",
    "section": "xcmPallet",
  },
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": 2000,
            },
          ],
        },
        "parents": 0,
      },
      "message": [
        {
          "ReserveAssetDeposited": [
            {
              "fun": {
                "Fungible": 1000000000000,
              },
              "id": {
                "interior": "Here",
                "parents": 1,
              },
            },
          ],
        },
        "ClearOrigin",
        {
          "BuyExecution": {
            "fees": {
              "fun": {
                "Fungible": 1000000000000,
              },
              "id": {
                "interior": "Here",
                "parents": 1,
              },
            },
            "weightLimit": "Unlimited",
          },
        },
        {
          "DepositAsset": {
            "assets": {
              "Wild": {
                "AllCounted": 1,
              },
            },
            "beneficiary": {
              "interior": {
                "X1": [
                  {
                    "AccountId32": {
                      "id": "(hash)",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": "Polkadot",
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "xcmPallet",
  },
]
`;
